# pdf-viewer

./: .gitignore  Cargo.toml  PDFiumConfig.cmake  README.md  build.rs  setup_assets.ps1
.cargo/: config.toml
src/: app.rs  main.rs
src/pdf/: document.rs  mod.rs  operations.rs  renderer.rs
src/resources/: mod.rs
src/ui/: editor_panel.rs  file_explorer.rs  mod.rs  thumbnail_panel.rs
