[package]
name = "pdf-viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
eframe = { version = "0.29", features = ["default_fonts", "glow", "persistence"] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }
env_logger = "0.11"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
log = "0.4"
once_cell = "1.20"
pdfium-render = "0.8"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
winresource = "0.1.29"
