[package]
name = "pdf-viewer"
version = "0.1.0"
edition = "2021"
authors = ["PDF Viewer Developer"]
description = "高機能PDF編集アプリケーション"
license = "MIT"

[dependencies]
# GUI Framework
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }

# PDF Processing (pdfium-render requires pdfium.dll)
pdfium-render = { version = "0.8", features = ["image", "thread_safe"] }

# Image Processing
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# File Dialog
rfd = "0.15"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
once_cell = "1.20"
parking_lot = "0.12"
uuid = { version = "1.11", features = ["v4"] }
chrono = "0.4"

# Logging
log = "0.4"
env_logger = "0.11"

# Error Handling
anyhow = "1.0"
thiserror = "2.0"

[build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0

# Windows specific settings for static linking
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_Storage_FileSystem",
]}

# Feature flags
[features]
default = []